--- a/css/index.pc.css
+++ b/css/index.pc.css
@@ -1,383 +1,385 @@
-/* ---------- layout ---------- */
-body {
-  background-color: #f6e0b7;
-}
-/* ---------- visual ---------- */
-#visual {
-  width: 100%;
-  height: 500px;
-  overflow: hidden;
-  background-image: url(../img/visual.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  font-family: "Bebas Neue", sans-serif;
-  position: relative;
-  background-color: #d70204;
-}
-.visualTxt {
-  padding-top: 125px;
-  margin-left: 100px;
-}
-.visualTxt h2 {
-  color: white;
-  font-size: 80px;
-  line-height: 80px;
-  letter-spacing: 7px;
-}
-.visualTxt div {
-  width: 100px;
-  height: 40px;
-  margin-top: 40px;
-  line-height: 40px;
-  text-align: center;
-  font-size: 18px;
-  letter-spacing: 2;
-  color: #d70204;
-  background-color: white;
-}
-#visual img {
-  width: 550px;
-  position: absolute;
-  right: -170px;
-  bottom: -60px;
-}
-/* ---------- header ---------- */
-header {
-  width: 1200px;
-  margin: 50px auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-header h1 img {
-  width: 140px;
-}
-header ul {
-  display: flex;
-  gap: 35px;
-}
-header li {
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 32px;
-}
-/* ---------- container ---------- */
+@media (min-width: 1200px) {
+  /* ---------- layout ---------- */
+  body {
+    background-color: #f6e0b7;
+  }
+  /* ---------- visual ---------- */
+  #visual {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    background-image: url(../img/visual.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    font-family: "Bebas Neue", sans-serif;
+    position: relative;
+    background-color: #d70204;
+  }
+  .visualTxt {
+    padding-top: 125px;
+    margin-left: 100px;
+  }
+  .visualTxt h2 {
+    color: white;
+    font-size: 80px;
+    line-height: 80px;
+    letter-spacing: 7px;
+  }
+  .visualTxt div {
+    width: 100px;
+    height: 40px;
+    margin-top: 40px;
+    line-height: 40px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 2;
+    color: #d70204;
+    background-color: white;
+  }
+  #visual img {
+    width: 550px;
+    position: absolute;
+    right: -170px;
+    bottom: -60px;
+  }
+  /* ---------- header ---------- */
+  header {
+    width: 1200px;
+    margin: 50px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  header h1 img {
+    width: 140px;
+  }
+  header ul {
+    display: flex;
+    gap: 35px;
+  }
+  header li {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 32px;
+  }
+  /* ---------- container ---------- */
 
-/* con1 */
-#con1 {
-  width: 1200px;
-  height: 500px;
-  margin: 0px auto;
-  font-family: "Bebas Neue", sans-serif;
-  overflow-y: hidden;
-}
-#con1 ul {
-  width: 100%;
-  height: 250px;
-  display: flex;
-  gap: 10px;
-}
-#con1 li {
-  border-radius: 8px;
-}
-#con1 a {
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-.con1Bottom {
-  margin-top: 10px;
-}
-#con1 .con1Top li:nth-child(1) {
-  width: calc(100% / 2 - 20px);
-  background-image: url(../img/index_con1_1.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-#con1 .con1Top li:nth-child(2) {
-  width: calc(100% / 4 - 20px);
-  background-image: url(../img/index_con1_2.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-#con1 .con1Top li:nth-child(3) {
-  width: calc(100% / 4 - 20px);
-  background-color: white;
-  text-align: center;
-}
-#con1 .con1Top li:nth-child(3) h3 {
-  font-size: 55px;
-  line-height: 60px;
-  letter-spacing: 3px;
-  font-weight: bolder;
-  margin-top: 30px;
-}
-#con1 .con1Top li:nth-child(3) div {
-  width: 180px;
-  height: 40px;
-  line-height: 40px;
-  margin: 20px auto;
-  font-size: 20px;
-  font-weight: 500;
-  color: #d70204;
-  border: 2px solid #d70204;
-  border-radius: 7px;
-  letter-spacing: 1px;
-}
-#con1 .con1Bottom li:nth-child(1) {
-  width: calc(100% / 4 - 20px);
-  background-image: url(../img/index_con1_3.JPG);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-#con1 .con1Bottom li:nth-child(2) {
-  width: calc(100% / 4 - 20px);
-  background-color: #d70204;
-  text-align: center;
-}
-#con1 .con1Bottom li:nth-child(2) h4 {
-  color: white;
-  font-size: 35px;
-  letter-spacing: 3px;
-  margin-top: 40px;
-}
-#con1 .con1Bottom li:nth-child(2) p {
-  margin-top: 8px;
-  font-family: "Open Sans", serif;
-  font-size: 13px;
-  font-weight: 400;
-  color: white;
-}
-#con1 .con1Bottom li:nth-child(2) div {
-  width: 100px;
-  height: 30px;
-  line-height: 33px;
-  margin: 25px auto;
-  background-color: white;
-  border-radius: 20px;
-  font-size: 20px;
-  color: #d70204;
-}
-#con1 .con1Bottom li:nth-child(3) {
-  width: calc(100% / 2 - 20px);
-  background-image: url(../img/index_con1_4.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top;
-}
-/* con2 */
-#con2 {
-  width: 100%;
-  height: 250px;
-  background-color: white;
-  margin-top: 300px;
-  position: relative;
-}
-/* food img */
-#con2 ul {
-  width: 120%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  top: -60%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-#con2 li:nth-child(1) img {
-  width: 280px;
-}
-#con2 li:nth-child(2) img {
-  width: 350px;
-}
-#con2 li:nth-child(3) img {
-  width: 280px;
-}
-/* txt */
-.con2txt {
-  text-align: center;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.con2txt h4 {
-  font-size: 22px;
-  color: #d70204;
-  margin-bottom: 8px;
-}
-.con2txt p {
-  font-size: 12px;
-}
-.con2txt div {
-  width: 120px;
-  height: 30px;
-  line-height: 30px;
-  margin: 16px auto;
-  background-color: #d70204;
-  box-sizing: border-box;
-  padding-left: 10px;
-}
-.con2txt div a {
-  font-family: "Bebas Neue", sans-serif;
-  letter-spacing: 1px;
-  font-size: 18px;
-  color: white;
-}
-/* btn */
-#con2 i {
-  font-size: 50px;
-  color: #d70204;
-}
-#con2 .prev {
-  position: absolute;
-  top: -10%;
-  left: 30%;
-  z-index: 10;
-}
-#con2 .next {
-  position: absolute;
-  top: -10%;
-  right: 30%;
-  z-index: 10;
-}
-/* con3 */
-#con3 {
-  width: 100%;
-  height: 800px;
-  background-color: white;
-  margin-top: 150px;
-  background-image: url(../img/stripe.jpg);
-  background-repeat: no-repeat;
-  background-position: top;
-  font-family: "Bebas Neue", sans-serif;
-  text-align: center;
-  overflow-y: hidden;
-}
-#con3 h4 {
-  padding-top: 80px;
-  font-size: 40px;
-}
-#con3 h3 {
-  font-size: 60px;
-}
-#con3 span {
-  color: #d70204;
-}
-#con3 ul {
-  width: 60%;
-  display: flex;
-  gap: 30px;
-  margin: -50px auto;
-}
-#con3 li:nth-child(2) {
-  margin-top: 80px;
-}
-#con3 img {
-  width: 100%;
-}
+  /* con1 */
+  #con1 {
+    width: 1200px;
+    height: 500px;
+    margin: 0px auto;
+    font-family: "Bebas Neue", sans-serif;
+    overflow-y: hidden;
+  }
+  #con1 ul {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    gap: 10px;
+  }
+  #con1 li {
+    border-radius: 8px;
+  }
+  #con1 a {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  .con1Bottom {
+    margin-top: 10px;
+  }
+  #con1 .con1Top li:nth-child(1) {
+    width: calc(100% / 2 - 20px);
+    background-image: url(../img/index_con1_1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  #con1 .con1Top li:nth-child(2) {
+    width: calc(100% / 4 - 20px);
+    background-image: url(../img/index_con1_2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  #con1 .con1Top li:nth-child(3) {
+    width: calc(100% / 4 - 20px);
+    background-color: white;
+    text-align: center;
+  }
+  #con1 .con1Top li:nth-child(3) h3 {
+    font-size: 55px;
+    line-height: 60px;
+    letter-spacing: 3px;
+    font-weight: bolder;
+    margin-top: 30px;
+  }
+  #con1 .con1Top li:nth-child(3) div {
+    width: 180px;
+    height: 40px;
+    line-height: 40px;
+    margin: 20px auto;
+    font-size: 20px;
+    font-weight: 500;
+    color: #d70204;
+    border: 2px solid #d70204;
+    border-radius: 7px;
+    letter-spacing: 1px;
+  }
+  #con1 .con1Bottom li:nth-child(1) {
+    width: calc(100% / 4 - 20px);
+    background-image: url(../img/index_con1_3.JPG);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  #con1 .con1Bottom li:nth-child(2) {
+    width: calc(100% / 4 - 20px);
+    background-color: #d70204;
+    text-align: center;
+  }
+  #con1 .con1Bottom li:nth-child(2) h4 {
+    color: white;
+    font-size: 35px;
+    letter-spacing: 3px;
+    margin-top: 40px;
+  }
+  #con1 .con1Bottom li:nth-child(2) p {
+    margin-top: 8px;
+    font-family: "Open Sans", serif;
+    font-size: 13px;
+    font-weight: 400;
+    color: white;
+  }
+  #con1 .con1Bottom li:nth-child(2) div {
+    width: 100px;
+    height: 30px;
+    line-height: 33px;
+    margin: 25px auto;
+    background-color: white;
+    border-radius: 20px;
+    font-size: 20px;
+    color: #d70204;
+  }
+  #con1 .con1Bottom li:nth-child(3) {
+    width: calc(100% / 2 - 20px);
+    background-image: url(../img/index_con1_4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+  }
+  /* con2 */
+  #con2 {
+    width: 100%;
+    height: 250px;
+    background-color: white;
+    margin-top: 300px;
+    position: relative;
+  }
+  /* food img */
+  #con2 ul {
+    width: 120%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: -60%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  #con2 li:nth-child(1) img {
+    width: 280px;
+  }
+  #con2 li:nth-child(2) img {
+    width: 350px;
+  }
+  #con2 li:nth-child(3) img {
+    width: 280px;
+  }
+  /* txt */
+  .con2txt {
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .con2txt h4 {
+    font-size: 22px;
+    color: #d70204;
+    margin-bottom: 8px;
+  }
+  .con2txt p {
+    font-size: 12px;
+  }
+  .con2txt div {
+    width: 120px;
+    height: 30px;
+    line-height: 30px;
+    margin: 16px auto;
+    background-color: #d70204;
+    box-sizing: border-box;
+    padding-left: 10px;
+  }
+  .con2txt div a {
+    font-family: "Bebas Neue", sans-serif;
+    letter-spacing: 1px;
+    font-size: 18px;
+    color: white;
+  }
+  /* btn */
+  #con2 i {
+    font-size: 50px;
+    color: #d70204;
+  }
+  #con2 .prev {
+    position: absolute;
+    top: -10%;
+    left: 30%;
+    z-index: 10;
+  }
+  #con2 .next {
+    position: absolute;
+    top: -10%;
+    right: 30%;
+    z-index: 10;
+  }
+  /* con3 */
+  #con3 {
+    width: 100%;
+    height: 800px;
+    background-color: white;
+    margin-top: 150px;
+    background-image: url(../img/stripe.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    font-family: "Bebas Neue", sans-serif;
+    text-align: center;
+    overflow-y: hidden;
+  }
+  #con3 h4 {
+    padding-top: 80px;
+    font-size: 40px;
+  }
+  #con3 h3 {
+    font-size: 60px;
+  }
+  #con3 span {
+    color: #d70204;
+  }
+  #con3 ul {
+    width: 60%;
+    display: flex;
+    gap: 30px;
+    margin: -50px auto;
+  }
+  #con3 li:nth-child(2) {
+    margin-top: 80px;
+  }
+  #con3 img {
+    width: 100%;
+  }
 
-/* con4 */
-#con4 {
-  width: 100%;
-  margin-top: 120px;
-  display: flex;
-}
-#con4 .storeImg {
-  width: 550px;
-  height: 550px;
-  margin-left: 150px;
-  border-radius: 15px;
-  background-color: white;
-  background-image: url(../img/index_con4.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: left;
-}
-#con4 .con4txt {
-  margin-left: 50px;
-  margin-top: 220px;
-}
-#con4 h3 {
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 70px;
-  line-height: 70px;
-  letter-spacing: 3px;
-  margin-bottom: 20px;
-}
-#con4 span {
-  color: #d70204;
-}
-#con4 p {
-  font-size: 14px;
-  line-height: 25px;
-}
-#con4 .btnRed {
-  color: white;
-  background-color: #d70204;
-  width: 170px;
-  height: 35px;
-  line-height: 35px;
-  box-sizing: border-box;
-  padding-left: 15px;
-  margin-top: 25px;
-  border-radius: 5px;
-}
-/* ---------- footer ---------- */
-footer {
-  width: 100%;
-  padding: 30px 0px 20px;
-  margin-top: 120px;
-  background-color: black;
-  text-align: center;
-  color: white;
-}
-footer h3 {
-  font-size: 30px;
-}
-footer h4 {
-  width: 200px;
-  margin: 0px auto;
-  font-size: 30px;
-  padding-bottom: 12px;
-  margin-bottom: 40px;
-  -webkit-text-stroke: 0.5px white;
-  color: transparent;
-  border-bottom: 2px solid white;
-}
-footer .footer {
-  width: 96%;
-  margin: 0px auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-footer .sns {
-  display: flex;
-  gap: 10px;
-}
-footer .sns li {
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  text-align: center;
-  background-color: white;
-  font-size: 18px;
-  border-radius: 50%;
-}
-footer .policy {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-.policy li:last-child {
-  border: 1px solid white;
-  padding: 4px 8px;
-}
-.policy a {
-  color: white;
-  font-size: 13px;
+  /* con4 */
+  #con4 {
+    width: 100%;
+    margin-top: 120px;
+    display: flex;
+  }
+  #con4 .storeImg {
+    width: 550px;
+    height: 550px;
+    margin-left: 150px;
+    border-radius: 15px;
+    background-color: white;
+    background-image: url(../img/index_con4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
+  }
+  #con4 .con4txt {
+    margin-left: 50px;
+    margin-top: 220px;
+  }
+  #con4 h3 {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 70px;
+    line-height: 70px;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+  }
+  #con4 span {
+    color: #d70204;
+  }
+  #con4 p {
+    font-size: 14px;
+    line-height: 25px;
+  }
+  #con4 .btnRed {
+    color: white;
+    background-color: #d70204;
+    width: 170px;
+    height: 35px;
+    line-height: 35px;
+    box-sizing: border-box;
+    padding-left: 15px;
+    margin-top: 25px;
+    border-radius: 5px;
+  }
+  /* ---------- footer ---------- */
+  footer {
+    width: 100%;
+    padding: 30px 0px 20px;
+    margin-top: 120px;
+    background-color: black;
+    text-align: center;
+    color: white;
+  }
+  footer h3 {
+    font-size: 30px;
+  }
+  footer h4 {
+    width: 200px;
+    margin: 0px auto;
+    font-size: 30px;
+    padding-bottom: 12px;
+    margin-bottom: 40px;
+    -webkit-text-stroke: 0.5px white;
+    color: transparent;
+    border-bottom: 2px solid white;
+  }
+  footer .footer {
+    width: 96%;
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  footer .sns {
+    display: flex;
+    gap: 10px;
+  }
+  footer .sns li {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    background-color: white;
+    font-size: 18px;
+    border-radius: 50%;
+  }
+  footer .policy {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  .policy li:last-child {
+    border: 1px solid white;
+    padding: 4px 8px;
+  }
+  .policy a {
+    color: white;
+    font-size: 13px;
+  }
 }
