--- a/css/index.pc.css
+++ b/css/index.pc.css
@@ -63,6 +63,9 @@
     font-family: "Bebas Neue", sans-serif;
     font-size: 32px;
   }
+  .bar {
+    display: none;
+  }
   /* ---------- container ---------- */
 
   /* con1 */
