--- a/css/food.mo.css
+++ b/css/food.mo.css
@@ -1,4 +1,4 @@
-@media (min-width: 800px) and (max-width: 1200px) {
+@media (max-width: 800px) {
   /* ---------- layout ---------- */
   body {
     background-color: #f6e0b7;
@@ -6,31 +6,26 @@
 
   /* ---------- header ---------- */
   header {
-    width: 750px;
+    width: 90%;
     margin: 3rem auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   header h1 img {
-    width: 140px;
+    width: 100px;
   }
-  header ul {
-    display: flex;
-    gap: 35px;
-  }
-  header li {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 32px;
+  .gnb {
+    display: none;
   }
   .bar {
-    display: none;
+    font-size: 23px;
   }
 
   /* ---------- visual ---------- */
   #visual {
     width: 100%;
-    height: 27rem;
+    height: 20rem;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
@@ -40,27 +35,28 @@
     background-color: #d70204;
   }
   #visual h2 {
-    font-size: 80px;
+    font-size: 60px;
     color: white;
     text-align: center;
-    line-height: 27rem;
+    line-height: 20rem;
     letter-spacing: 3px;
   }
-
   /* ---------- con1 ---------- */
   #con1 {
     width: 100%;
     margin: 8rem 0px;
   }
   #con1 ul {
-    width: 770px;
-    margin: 0px auto;
+    width: 90%;
+    flex-wrap: wrap;
     display: flex;
-    gap: 30px;
+    justify-content: center;
+    margin: 0px auto;
+    gap: 10px;
   }
   #con1 li {
-    width: 170px;
-    height: 170px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     font-family: "Bebas Neue", sans-serif;
     text-align: center;
@@ -77,21 +73,21 @@
   }
   #con1 li:nth-child(1) {
     background-image: url(../img/food_con1_salad2.png);
-    line-height: 180px;
+    line-height: 130px;
   }
   #con1 li:nth-child(2) {
     background-image: url(../img/food_con1_pasta2.png);
-    line-height: 45px;
+    line-height: 40px;
     box-sizing: border-box;
-    padding-top: 3rem;
+    padding-top: 1.7rem;
   }
   #con1 li:nth-child(3) {
     background-image: url(../img/food_con1_burger2.png);
-    line-height: 180px;
+    line-height: 130px;
   }
   #con1 li:nth-child(4) {
     background-image: url(../img/food_con1_grill2.png);
-    line-height: 180px;
+    line-height: 130px;
   }
   #con1 li.on {
     background-color: #d70204;
@@ -99,15 +95,10 @@
   }
   /* ---------- con2 ---------- */
   #con2 {
-    width: 750px;
+    width: 95%;
     background-color: white;
     margin: 0px auto;
     text-align: center;
-    background-image: url(../img/food_salad1.png), url(../img/food_salad2.png),
-      url(../img/food_salad3.png), url(../img/food_salad4.png);
-    background-repeat: no-repeat;
-    background-position: 30px 310px, 540px 600px, -30px 850px, 580px 1100px;
-    background-size: 240px, 280px, 300px, 260px;
   }
   #con2 img {
     width: 100%;
@@ -120,14 +111,12 @@
   }
   #con2 h2 {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 70px;
+    font-size: 50px;
     margin-top: 3rem;
-    letter-spacing: 5px;
   }
   #con2 > p {
     font-family: "Bebas Neue", sans-serif;
     font-size: 25px;
-    letter-spacing: 1px;
     margin-bottom: 5rem;
     font-weight: 100;
   }
@@ -135,13 +124,18 @@
     margin: 5rem 0px;
   }
   #con2 .menu h3 {
-    font-size: 24px;
+    font-size: 22px;
   }
   #con2 .menu h4 {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 100;
-    font-size: 20px;
+    font-size: 18px;
     margin: 0.6rem 0px 1.2rem;
+  }
+  #con2 .menu p {
+    width: 75%;
+    margin: 0px auto;
+    font-size: 14px;
   }
   #con2 .menu div {
     margin-top: 1rem;
@@ -149,9 +143,14 @@
     color: #d70204;
   }
   #con2 .menu img {
-    display: none;
+    width: 80%;
+    max-width: 280px;
+    min-width: 250px;
+    margin-bottom: 2rem;
   }
   #con2 .notice {
+    width: 80%;
+    margin: 0px auto;
     font-size: 12px;
     line-height: 30px;
     padding: 0.6rem 0px 1.4rem;
@@ -159,20 +158,20 @@
 
   /* ---------- con3 ---------- */
   #con3 {
-    width: 750px;
-    margin: 8rem auto;
+    width: 90%;
+    margin: 6rem auto;
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
     justify-content: space-between;
     font-family: "Bebas Neue", sans-serif;
   }
   #con3 > div {
-    width: calc(100% / 2 - 10px);
-    height: 260px;
     border-radius: 12px;
     box-sizing: border-box;
   }
   #con3 ul {
-    width: 270px;
+    width: 80%;
     justify-content: space-between;
     align-items: center;
     display: flex;
@@ -180,9 +179,8 @@
     padding-top: 2.4rem;
   }
   #con3 li {
-    font-size: 40px;
+    font-size: 38px;
     line-height: 40px;
-    letter-spacing: 2px;
   }
   #con3 img {
     width: 60px;
@@ -200,7 +198,7 @@
     text-align: center;
     border-radius: 7px;
     background-color: white;
-    margin: 2rem 0px 0px 2.5rem;
+    margin: 2rem auto;
   }
   .recipe div a {
     width: 100%;
@@ -223,7 +221,7 @@
     text-align: center;
     border-radius: 7px;
     background-color: #d70204;
-    margin: 2.4rem 0px 0px 2.5rem;
+    margin: 2rem auto;
   }
   .allergy div a {
     width: 100%;
@@ -236,7 +234,7 @@
   footer {
     width: 100%;
     padding: 1.3rem 0px;
-    margin-top: 10rem;
+    margin-top: 6rem;
     background-color: black;
     text-align: center;
     color: white;
@@ -277,11 +275,15 @@
   footer .policy {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
+  }
+  .policy li {
+    display: none;
   }
   .policy li:last-child {
     border: 1px solid white;
     padding: 0.4rem 0.7rem;
+    display: block;
   }
   .policy a {
     color: white;
