--- a/css/food.pc.css
+++ b/css/food.pc.css
@@ -23,6 +23,9 @@
     font-family: "Bebas Neue", sans-serif;
     font-size: 32px;
   }
+  .bar {
+    display: none;
+  }
 
   /* ---------- visual ---------- */
   #visual {
@@ -143,6 +146,9 @@
     margin-top: 20px;
     font-weight: bold;
     color: #d70204;
+  }
+  #con2 .menu img {
+    display: none;
   }
   #con2 .notice {
     font-size: 12px;
