--- a/css/index.mo.css
+++ b/css/index.mo.css
@@ -1,4 +1,4 @@
-@media (min-width: 800px) and (max-width: 1200px) {
+@media (max-width: 800px) {
   /* ---------- layout ---------- */
   body {
     background-color: #f6e0b7;
@@ -17,13 +17,13 @@
     background-color: #d70204;
   }
   .visualTxt {
-    padding-top: 7rem;
-    margin-left: 4rem;
+    padding-top: 4rem;
+    margin-left: 2rem;
   }
   .visualTxt h2 {
     color: white;
-    font-size: 60px;
-    line-height: 80px;
+    font-size: 45px;
+    line-height: 40px;
     letter-spacing: 7px;
   }
   .visualTxt div {
@@ -36,180 +36,184 @@
     letter-spacing: 2;
     color: #d70204;
     background-color: white;
+    border-radius: 5px;
   }
   #visual img {
-    width: 500px;
+    width: 60%;
+    min-width: 340px;
     position: absolute;
-    right: -8rem;
-    bottom: -4rem;
+    right: -7rem;
+    bottom: -3rem;
   }
   /* ---------- header ---------- */
   header {
-    width: 750px;
+    width: 90%;
     margin: 3rem auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   header h1 img {
-    width: 140px;
+    width: 100px;
   }
-  header ul {
+  /* header ul {
     display: flex;
     gap: 35px;
   }
   header li {
     font-family: "Bebas Neue", sans-serif;
     font-size: 32px;
+  } */
+  .gnb {
+    display: none;
   }
   .bar {
-    display: none;
+    font-size: 23px;
   }
   /* ---------- container ---------- */
 
   /* con1 */
   #con1 {
-    width: 800px;
-    height: 500px;
+    width: 100%;
     margin: 0px auto;
     font-family: "Bebas Neue", sans-serif;
     overflow-y: hidden;
   }
   #con1 ul {
-    width: 100%;
+    width: 90%;
     height: 180px;
+    margin: 0px auto;
     display: flex;
     gap: 0.7rem;
   }
   #con1 li {
     border-radius: 8px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
   #con1 a {
     width: 100%;
     height: 100%;
     display: block;
   }
-  .con1Bottom {
+  #con1 .con1Top {
+    display: none;
+  }
+  #con1 .con1Bottom {
+    display: none;
     margin-top: 0.7rem;
   }
-  #con1 .con1Top li:nth-child(1) {
-    width: calc(100% / 2 - 0.7rem);
+  #con1 .moCon1T_2 {
+    margin-top: 10px;
+  }
+  #con1 .moCon1T_3 {
+    margin-top: 10px;
+  }
+  #con1 .moCon1T_4 {
+    margin-top: 10px;
+  }
+  .moCon1T_1 li {
+    width: 100%;
     background-image: url(../img/index_con1_1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
   }
-  #con1 .con1Top li:nth-child(2) {
-    width: calc(100% / 4 - 0.7rem);
+  .moCon1T_2 li:nth-child(1) {
+    width: calc(100% / 2 - 5px);
     background-image: url(../img/index_con1_2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
   }
-  #con1 .con1Top li:nth-child(3) {
-    width: calc(100% / 4 - 0.7rem);
+  .moCon1T_2 li:nth-child(2) {
+    width: calc(100% / 2 - 5px);
     background-color: white;
     text-align: center;
   }
-  #con1 .con1Top li:nth-child(3) h3 {
+  .moCon1T_2 li:nth-child(2) h3 {
     font-size: 30px;
     line-height: 40px;
-    letter-spacing: 3px;
     font-weight: 900;
     margin-top: 1.5rem;
   }
-  #con1 .con1Top li:nth-child(3) div {
-    width: 140px;
-    height: 40px;
+  .moCon1T_2 li:nth-child(2) div {
+    width: 80%;
+    max-width: 130px;
     line-height: 40px;
     margin: 0.8rem auto;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 500;
     color: #d70204;
     border: 2px solid #d70204;
     border-radius: 7px;
-    letter-spacing: 1px;
+    flex-wrap: wrap;
   }
-  #con1 .con1Bottom li:nth-child(1) {
-    width: calc(100% / 4 - 0.7rem);
-    background-image: url(../img/index_con1_3.JPG);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  #con1 .con1Bottom li:nth-child(2) {
-    width: calc(100% / 4 - 0.7rem);
+  .moCon1T_3 li:nth-child(1) {
+    width: calc(100% / 2 - 5px);
     background-color: #d70204;
     text-align: center;
   }
-  #con1 .con1Bottom li:nth-child(2) h4 {
+  .moCon1T_3 li:nth-child(1) h4 {
     color: white;
     font-size: 30px;
     letter-spacing: 3px;
     margin-top: 1.2rem;
   }
-  #con1 .con1Bottom li:nth-child(2) p {
+  .moCon1T_3 li:nth-child(1) p {
     margin-top: 0.2rem;
     font-family: "Open Sans", serif;
     font-size: 13px;
     font-weight: 400;
     color: white;
   }
-  #con1 .con1Bottom li:nth-child(2) div {
+  .moCon1T_3 li:nth-child(1) div {
     width: 100px;
     height: 30px;
     line-height: 33px;
     margin: 1rem auto;
     background-color: white;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 18px;
     color: #d70204;
   }
-  #con1 .con1Bottom li:nth-child(3) {
-    width: calc(100% / 2 - 0.7rem);
+  .moCon1T_3 li:nth-child(2) {
+    width: calc(100% / 2 - 5px);
+    background-image: url(../img/index_con1_3.JPG);
+  }
+  .moCon1T_4 li {
+    width: 100%;
     background-image: url(../img/index_con1_4.JPG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
   }
+
   /* con2 */
   #con2 {
     width: 100%;
-    height: 16rem;
+    padding: 1rem 0rem;
     background-color: white;
     margin-top: 10rem;
     position: relative;
   }
   /* food img */
   #con2 ul {
-    width: 120%;
+    width: 40%;
+    margin: 0px auto;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    top: -55%;
-    left: 50%;
-    transform: translateX(-50%);
+    justify-content: center;
   }
-  #con2 li:nth-child(1) img {
-    width: 240px;
+  #con2 li:nth-child(1),
+  #con2 li:nth-child(3) {
+    display: none;
   }
   #con2 li:nth-child(2) img {
-    width: 320px;
-  }
-  #con2 li:nth-child(3) img {
-    width: 240px;
+    width: 100%;
+    min-width: 190px;
+    text-align: center;
   }
   /* txt */
   .con2txt {
     text-align: center;
-    position: absolute;
-    bottom: 1rem;
-    left: 50%;
-    transform: translateX(-50%);
   }
   .con2txt h4 {
-    font-size: 22px;
+    font-size: 20px;
     color: #d70204;
     margin-bottom: 0.8rem;
   }
@@ -224,6 +228,7 @@
     background-color: #d70204;
     box-sizing: border-box;
     padding-left: 0.3rem;
+    border-radius: 5px;
   }
   .con2txt div a {
     font-family: "Bebas Neue", sans-serif;
@@ -238,24 +243,28 @@
   }
   #con2 .prev {
     position: absolute;
-    top: -10%;
-    left: 25%;
+    top: 28%;
+    left: 10%;
+    transform: translateY(-50%);
     z-index: 10;
     cursor: pointer;
+    opacity: 0.5;
   }
   #con2 .next {
     position: absolute;
-    top: -10%;
-    right: 25%;
+    top: 28%;
+    right: 10%;
+    transform: translateY(-50%);
     z-index: 10;
     cursor: pointer;
+    opacity: 0.5;
   }
   /* con3 */
   #con3 {
     width: 100%;
-    height: 35rem;
     background-color: white;
     margin-top: 10rem;
+    padding-bottom: 2.5rem;
     background-image: url(../img/stripe.jpg);
     background-repeat: no-repeat;
     background-position: top;
@@ -275,12 +284,12 @@
   }
   #con3 ul {
     width: 60%;
+    margin: 0px auto;
     display: flex;
-    gap: 30px;
-    margin: -4rem auto;
+    flex-direction: column;
   }
-  #con3 li:nth-child(2) {
-    margin-top: 6rem;
+  #con3 li {
+    margin-top: 2rem;
   }
   #con3 img {
     width: 100%;
@@ -289,13 +298,14 @@
   /* con4 */
   #con4 {
     width: 100%;
-    margin-top: 9rem;
+    margin-top: 6rem;
     display: flex;
+    flex-direction: column;
   }
   #con4 .storeImg {
-    width: 400px;
-    height: 400px;
-    margin-left: 5rem;
+    width: 80%;
+    height: 300px;
+    margin: 0px auto;
     border-radius: 15px;
     background-color: white;
     background-image: url(../img/index_con4.jpg);
@@ -304,8 +314,8 @@
     background-position: left;
   }
   #con4 .con4txt {
-    margin-left: 2rem;
-    margin-top: 7rem;
+    margin-top: 4rem;
+    text-align: center;
   }
   #con4 h3 {
     font-family: "Bebas Neue", sans-serif;
@@ -322,21 +332,21 @@
     line-height: 25px;
   }
   #con4 .btnRed {
-    color: white;
-    background-color: #d70204;
     width: 170px;
     height: 35px;
+    margin: 0px auto;
     line-height: 35px;
     box-sizing: border-box;
-    padding-left: 1rem;
     margin-top: 2rem;
     border-radius: 5px;
+    color: white;
+    background-color: #d70204;
   }
   /* ---------- footer ---------- */
   footer {
     width: 100%;
     padding: 1.3rem 0px;
-    margin-top: 10rem;
+    margin-top: 6rem;
     background-color: black;
     text-align: center;
     color: white;
@@ -379,9 +389,13 @@
     align-items: center;
     gap: 20px;
   }
+  .policy li {
+    display: none;
+  }
   .policy li:last-child {
     border: 1px solid white;
     padding: 0.4rem 0.7rem;
+    display: block;
   }
   .policy a {
     color: white;
