--- a/css/story.mo.css
+++ b/css/story.mo.css
@@ -1,4 +1,4 @@
-@media (min-width: 800px) and (max-width: 1200px) {
+@media (max-width: 800px) {
   /* ---------- layout ---------- */
   body {
     background-color: #f6e0b7;
@@ -6,30 +6,26 @@
 
   /* ---------- header ---------- */
   header {
-    width: 750px;
+    width: 90%;
     margin: 3rem auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   header h1 img {
-    width: 140px;
+    width: 100px;
   }
-  header ul {
-    display: flex;
-    gap: 35px;
-  }
-  header li {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 32px;
-  }
-  .bar {
+  .gnb {
     display: none;
   }
+  .bar {
+    font-size: 23px;
+  }
+
   /* ---------- visual ---------- */
   #visual {
     width: 100%;
-    height: 27rem;
+    height: 20rem;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
@@ -39,17 +35,18 @@
     background-color: #d70204;
   }
   #visual h2 {
-    font-size: 80px;
+    font-size: 60px;
     color: white;
     text-align: center;
-    line-height: 27rem;
+    line-height: 20rem;
     letter-spacing: 3px;
   }
+
   /* ---------- con1 ---------- */
   #con1 {
     width: 100%;
-    height: 37rem;
-    margin-top: 9rem;
+    height: 48rem;
+    margin-top: 6rem;
     background-image: url(../img/story_con1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,25 +59,24 @@
   #con1 h3 {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 300;
-    font-size: 80px;
-    letter-spacing: 5px;
-    padding-top: 6rem;
+    font-size: 50px;
+    padding-top: 4rem;
   }
   #con1 h2 {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 900;
-    font-size: 100px;
+    font-size: 70px;
     letter-spacing: 3px;
-    margin-top: -2rem;
+    margin-top: -1rem;
   }
   #con1 ul {
     width: 100%;
-    height: 40%;
+    height: 70%;
     display: flex;
-    justify-content: center;
-    gap: 9rem;
+    gap: 5%;
+    flex-direction: column;
     background-color: black;
-    opacity: 0.7;
+    opacity: 0.6;
     position: absolute;
     bottom: 0px;
   }
@@ -88,18 +84,18 @@
     text-align: center;
   }
   #con1 img {
-    width: 32px;
+    width: 20px;
     opacity: 0.8;
-    margin-top: 2.7rem;
+    margin-top: 2rem;
   }
   #con1 li div {
-    font-size: 55px;
+    font-size: 40px;
     font-weight: 900;
-    margin-top: 1.2rem;
+    margin-top: 0.8rem;
   }
   #con1 li p {
     font-size: 12px;
-    margin-top: 0.7rem;
+    margin-top: 0.5rem;
   }
   /* ---------- con2 ---------- */
   #con2 {
@@ -113,6 +109,7 @@
     height: 2190px;
     margin: 0px auto;
     background-color: #888;
+    display: none;
   }
   .location li {
     width: 45px;
@@ -128,10 +125,22 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    display: none;
+  }
+  .con {
+    width: 100%;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
   }
   .con li {
-    position: absolute;
-    top: 50px;
+    width: 80%;
+    margin: 0px auto;
+    margin-bottom: 4rem;
+    padding-top: 3rem;
+    background-image: url(../img/stripe.jpg);
+    background-repeat: no-repeat;
+    background-size: 170% 1rem;
   }
   .con li .txt {
     width: 88%;
@@ -139,37 +148,25 @@
     text-align: left;
     padding-bottom: 1rem;
   }
-  .con li:nth-child(2n-1) {
-    left: 6%;
-  }
-  .con li:nth-child(2n) {
-    right: 6%;
-  }
+
   /* box1 */
-  .location li:nth-child(1) {
-    top: 50px;
-  }
   .con li:nth-child(1) {
-    width: 300px;
     text-align: center;
     background-color: white;
+    font-size: 14px;
   }
   .con li:nth-child(1) img {
-    width: 200px;
+    width: 65%;
     margin: 1rem 0px;
   }
   .con li:nth-child(1) h3 {
     margin-bottom: 1rem;
   }
   /* box2 */
-  .location li:nth-child(2) {
-    top: 450px;
-  }
   .con li:nth-child(2) {
-    width: 300px;
     text-align: center;
     background-color: white;
-    top: 450px;
+    font-size: 14px;
   }
   .con li:nth-child(2) img {
     width: 75%;
@@ -177,14 +174,10 @@
     padding: 1.5rem 0px;
   }
   /* box3 */
-  .location li:nth-child(3) {
-    top: 900px;
-  }
   .con li:nth-child(3) {
-    width: 300px;
     text-align: center;
     background-color: white;
-    top: 900px;
+    font-size: 14px;
   }
   .con li:nth-child(3) img {
     width: 80%;
@@ -194,14 +187,10 @@
     margin-bottom: 1rem;
   }
   /* box4 */
-  .location li:nth-child(4) {
-    top: 1320px;
-  }
   .con li:nth-child(4) {
-    width: 300px;
     text-align: center;
     background-color: white;
-    top: 1320px;
+    font-size: 14px;
   }
   .con li:nth-child(4) img {
     width: 70%;
@@ -211,14 +200,11 @@
     margin-bottom: 15px;
   }
   /* box5 */
-  .location li:nth-child(5) {
-    top: 1760px;
-  }
   .con li:nth-child(5) {
-    width: 300px;
     text-align: center;
     background-color: white;
-    top: 1760px;
+    font-size: 14px;
+    margin-bottom: -1rem;
   }
   .con li:nth-child(5) img {
     width: 70%;
@@ -231,7 +217,7 @@
   footer {
     width: 100%;
     padding: 1.3rem 0px;
-    margin-top: 10rem;
+    margin-top: 6rem;
     background-color: black;
     text-align: center;
     color: white;
@@ -272,11 +258,15 @@
   footer .policy {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
+  }
+  .policy li {
+    display: none;
   }
   .policy li:last-child {
     border: 1px solid white;
     padding: 0.4rem 0.7rem;
+    display: block;
   }
   .policy a {
     color: white;
