--- a/css/event.mo.css
+++ b/css/event.mo.css
@@ -6,11 +6,17 @@
 
   /* ---------- header ---------- */
   header {
-    width: 90%;
-    margin: 3rem auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
   }
   header h1 img {
     width: 100px;
@@ -33,6 +39,7 @@
     background-position: center;
     font-family: "Bebas Neue", sans-serif;
     background-color: #d70204;
+    margin-top: 80px;
   }
   #visual h2 {
     font-size: 60px;
