--- a/css/food.pc.css
+++ b/css/food.pc.css
@@ -6,11 +6,18 @@
 
   /* ---------- header ---------- */
   header {
-    width: 1200px;
-    margin: 50px auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 140px;
@@ -131,7 +138,13 @@
     font-weight: 100;
   }
   #con2 .menu {
+    margin: 300px 0px;
+    opacity: 0;
+  }
+  #con2 .menu.on {
     margin: 80px 0px;
+    opacity: 1;
+    transition: 1.5s;
   }
   #con2 .menu h3 {
     font-size: 24px;
@@ -207,6 +220,9 @@
     display: block;
     color: #d70204;
     font-size: 20px;
+  }
+  .icon2 {
+    display: none;
   }
   #con3 .allergy {
     background-color: white;
