--- a/css/index.pc.css
+++ b/css/index.pc.css
@@ -46,11 +46,18 @@
   }
   /* ---------- header ---------- */
   header {
-    width: 1200px;
-    margin: 50px auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 140px;
@@ -73,6 +80,7 @@
     width: 1200px;
     height: 500px;
     margin: 0px auto;
+    margin-top: 100px;
     font-family: "Bebas Neue", sans-serif;
     overflow-y: hidden;
   }
