--- a/css/store.pc.css
+++ b/css/store.pc.css
@@ -6,11 +6,17 @@
 
   /* ---------- header ---------- */
   header {
-    width: 1200px;
-    margin: 50px auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
   }
   header h1 img {
     width: 140px;
