--- a/css/store.tablet.css
+++ b/css/store.tablet.css
@@ -6,11 +6,17 @@
 
   /* ---------- header ---------- */
   header {
-    width: 750px;
-    margin: 3rem auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
   }
   header h1 img {
     width: 140px;
@@ -31,6 +37,7 @@
   #visual {
     width: 100%;
     height: 27rem;
+    margin-top: 80px;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
