--- a/css/story.mo.css
+++ b/css/story.mo.css
@@ -6,11 +6,17 @@
 
   /* ---------- header ---------- */
   header {
-    width: 90%;
-    margin: 3rem auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
   }
   header h1 img {
     width: 100px;
@@ -26,6 +32,7 @@
   #visual {
     width: 100%;
     height: 20rem;
+    margin-top: 80px;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
