--- a/css/story.pc.css
+++ b/css/story.pc.css
@@ -6,11 +6,18 @@
 
   /* ---------- header ---------- */
   header {
-    width: 1200px;
-    margin: 50px auto;
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 140px;
@@ -106,6 +113,7 @@
     width: 100%;
     margin-top: 120px;
     position: relative;
+    overflow: hidden;
   }
   /* timeline */
   .timeline {
@@ -153,6 +161,13 @@
     width: 500px;
     text-align: center;
     background-color: white;
+    top: 300px;
+    opacity: 0;
+  }
+  .con li:nth-child(1).on {
+    top: 0px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(1) img {
     width: 250px;
@@ -169,7 +184,13 @@
     width: 500px;
     text-align: center;
     background-color: white;
+    top: 700px;
+    opacity: 0;
+  }
+  .con li:nth-child(2).on {
     top: 450px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(2) img {
     width: 75%;
@@ -184,7 +205,13 @@
     width: 500px;
     text-align: center;
     background-color: white;
+    top: 1150px;
+    opacity: 0;
+  }
+  .con li:nth-child(3).on {
     top: 900px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(3) img {
     width: 70%;
@@ -201,7 +228,13 @@
     width: 500px;
     text-align: center;
     background-color: white;
+    top: 1620px;
+    opacity: 0;
+  }
+  .con li:nth-child(4).on {
     top: 1320px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(4) img {
     width: 70%;
@@ -218,7 +251,13 @@
     width: 500px;
     text-align: center;
     background-color: white;
+    top: 2000px;
+    opacity: 0;
+  }
+  .con li:nth-child(5).on {
     top: 1760px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(5) img {
     width: 70%;
