--- a/css/food.mo.css
+++ b/css/food.mo.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     padding: 0px 50px;
     z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 100px;
@@ -31,7 +32,6 @@
   /* ---------- visual ---------- */
   #visual {
     width: 100%;
-    height: 20rem;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
@@ -39,7 +39,6 @@
     background-position: center;
     font-family: "Bebas Neue", sans-serif;
     background-color: #d70204;
-    margin-top: 80px;
   }
   #visual h2 {
     font-size: 60px;
@@ -128,7 +127,13 @@
     font-weight: 100;
   }
   #con2 .menu {
+    margin: 10rem 0px;
+    opacity: 0;
+  }
+  #con2 .menu.on {
     margin: 5rem 0px;
+    opacity: 1;
+    transition: 1.5s;
   }
   #con2 .menu h3 {
     font-size: 22px;
