--- a/css/food.tablet.css
+++ b/css/food.tablet.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     padding: 0px 50px;
     z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 140px;
@@ -36,7 +37,6 @@
   /* ---------- visual ---------- */
   #visual {
     width: 100%;
-    height: 27rem;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
@@ -44,7 +44,6 @@
     background-position: center;
     font-family: "Bebas Neue", sans-serif;
     background-color: #d70204;
-    margin-top: 80px;
   }
   #visual h2 {
     font-size: 80px;
@@ -139,7 +138,13 @@
     font-weight: 100;
   }
   #con2 .menu {
+    margin: 10rem 0px;
+    opacity: 0;
+  }
+  #con2 .menu.on {
     margin: 5rem 0px;
+    opacity: 1;
+    transition: 1.5s;
   }
   #con2 .menu h3 {
     font-size: 24px;
