--- a/css/store.pc.css
+++ b/css/store.pc.css
@@ -56,7 +56,28 @@
   /* ---------- popup ---------- */
   #popup {
     width: 900px;
-    margin: 100px auto;
+    background-color: white;
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .modal {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 998;
+  }
+  #popup button {
+    margin-top: -30px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 2px 6px;
     background-color: white;
   }
   #popup .stripe1 {
@@ -86,45 +107,45 @@
   }
 
   /* ---------- con1 ---------- */
-  #con1 {
+  #con2 {
     margin-top: 120px;
   }
-  #con1 .store {
+  #con2 .store {
     width: 1100px;
     margin: 80px auto;
     display: flex;
     gap: 20px;
   }
-  #con1 .store > li {
+  #con2 .store > li {
     border-radius: 10px;
   }
-  #con1 .store img {
+  #con2 .store img {
     width: 350px;
     border-radius: 10px;
   }
-  #con1 h3 {
+  #con2 h3 {
     color: #d70204;
     font-size: 22px;
     margin-bottom: 15px;
   }
-  #con1 span {
+  #con2 span {
     color: #d70204;
   }
-  #con1 .store > li:last-child {
+  #con2 .store > li:last-child {
     width: calc(100% - 370px);
     background-color: white;
     box-sizing: border-box;
     padding: 40px;
   }
-  #con1 .store ul {
+  #con2 .store ul {
     display: flex;
     gap: 10px;
     margin-top: 30px;
   }
-  #con1 .open {
+  #con2 .open {
     margin: 25px 0px 8px;
   }
-  #con1 .btn li:nth-child(1) {
+  #con2 .btn li:nth-child(1) {
     width: 100px;
     height: 35px;
     line-height: 35px;
@@ -132,13 +153,13 @@
     border-radius: 5px;
     background-color: #d70204;
   }
-  #con1 .btn li:nth-child(1) a {
+  #con2 .btn li:nth-child(1) a {
     width: 100%;
     height: 100%;
     display: block;
     color: white;
   }
-  #con1 .btn li:nth-child(2) {
+  #con2 .btn li:nth-child(2) {
     width: 80px;
     height: 35px;
     line-height: 35px;
@@ -146,13 +167,13 @@
     border-radius: 5px;
     background-color: #d70204;
   }
-  #con1 .btn li:nth-child(2) a {
+  #con2 .btn li:nth-child(2) a {
     width: 100%;
     height: 100%;
     display: block;
     color: white;
   }
-  #con1 .btn li:nth-child(3) {
+  #con2 .btn li:nth-child(3) {
     width: 90px;
     height: 35px;
     line-height: 35px;
@@ -160,7 +181,7 @@
     border-radius: 5px;
     background-color: #777;
   }
-  #con1 .btn li:nth-child(3) a {
+  #con2 .btn li:nth-child(3) a {
     width: 100%;
     height: 100%;
     display: block;
