--- a/css/story.mo.css
+++ b/css/story.mo.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     padding: 0px 50px;
     z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 100px;
@@ -32,7 +33,6 @@
   #visual {
     width: 100%;
     height: 20rem;
-    margin-top: 80px;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
@@ -141,7 +141,7 @@
     flex-direction: column;
   }
   .con li {
-    width: 80%;
+    width: 100%;
     margin: 0px auto;
     margin-bottom: 4rem;
     padding-top: 3rem;
@@ -161,6 +161,13 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
+    padding-left: 400px;
+    opacity: 0;
+  }
+  .con li:nth-child(1).on {
+    padding-left: 0px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(1) img {
     width: 65%;
@@ -174,7 +181,15 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
+    padding-left: 400px;
+    opacity: 0;
   }
+  .con li:nth-child(2).on {
+    padding-left: 0px;
+    opacity: 1;
+    transition: 1s;
+  }
+
   .con li:nth-child(2) img {
     width: 75%;
     background-color: white;
@@ -185,6 +200,13 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
+    padding-left: 400px;
+    opacity: 0;
+  }
+  .con li:nth-child(3).on {
+    padding-left: 0px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(3) img {
     width: 80%;
@@ -198,6 +220,13 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
+    padding-left: 400px;
+    opacity: 0;
+  }
+  .con li:nth-child(4).on {
+    padding-left: 0px;
+    opacity: 1;
+    transition: 1s;
   }
   .con li:nth-child(4) img {
     width: 70%;
@@ -223,8 +252,8 @@
   /* ---------- footer ---------- */
   footer {
     width: 100%;
-    padding: 1.3rem 0px;
     margin-top: 6rem;
+    padding: 1.3rem 0px;
     background-color: black;
     text-align: center;
     color: white;
