--- a/css/index.pc.css
+++ b/css/index.pc.css
@@ -3,6 +3,37 @@
   body {
     background-color: #f6e0b7;
   }
+
+  /* ---------- header ---------- */
+  header {
+    width: 100%;
+    height: 80px;
+    background-color: #f0c77b;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    z-index: 100;
+    opacity: 0;
+  }
+  header h1 img {
+    width: 140px;
+  }
+  header ul {
+    display: flex;
+    gap: 35px;
+  }
+  header li {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 32px;
+  }
+  .bar {
+    display: none;
+  }
+
   /* ---------- visual ---------- */
   #visual {
     width: 100%;
@@ -44,35 +75,7 @@
     right: -170px;
     bottom: -60px;
   }
-  /* ---------- header ---------- */
-  header {
-    width: 100%;
-    height: 80px;
-    background-color: #f0c77b;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0px;
-    box-sizing: border-box;
-    padding: 0px 50px;
-    z-index: 100;
-    opacity: 0;
-  }
-  header h1 img {
-    width: 140px;
-  }
-  header ul {
-    display: flex;
-    gap: 35px;
-  }
-  header li {
-    font-family: "Bebas Neue", sans-serif;
-    font-size: 32px;
-  }
-  .bar {
-    display: none;
-  }
+
   /* ---------- container ---------- */
 
   /* con1 */
@@ -310,25 +313,47 @@
     background-size: cover;
     background-position: left;
   }
-  #con4 .con4txt {
-    margin-left: 50px;
+  .con4txt {
     margin-top: 220px;
   }
-  #con4 h3 {
+  .con4txt.on h3 {
+    margin-left: 50px;
+    opacity: 1;
+    transition: 1s;
+  }
+  .con4txt.on p {
+    margin-left: 50px;
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 0.2s;
+  }
+  .con4txt.on .btnRed {
+    margin-left: 50px;
+    opacity: 1;
+    transition: 1s;
+    transition-delay: 0.4s;
+  }
+  .con4txt h3 {
     font-family: "Bebas Neue", sans-serif;
     font-size: 70px;
     line-height: 70px;
     letter-spacing: 3px;
     margin-bottom: 20px;
+    margin-left: 140%;
+    white-space: nowrap;
+    opacity: 0;
   }
   #con4 span {
     color: #d70204;
   }
-  #con4 p {
+  .con4txt p {
+    margin-left: 140%;
+    white-space: nowrap;
     font-size: 14px;
     line-height: 25px;
+    opacity: 0;
   }
-  #con4 .btnRed {
+  .con4txt .btnRed {
     color: white;
     background-color: #d70204;
     width: 170px;
@@ -338,6 +363,8 @@
     padding-left: 15px;
     margin-top: 25px;
     border-radius: 5px;
+    margin-left: 140%;
+    opacity: 0;
   }
   /* ---------- footer ---------- */
   footer {
