--- a/css/store.mo.css
+++ b/css/store.mo.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     padding: 0px 50px;
     z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 100px;
@@ -39,7 +40,6 @@
     background-position: center;
     font-family: "Bebas Neue", sans-serif;
     background-color: #d70204;
-    margin-top: 80px;
   }
   #visual h2 {
     font-size: 60px;
@@ -50,11 +50,35 @@
   }
 
   /* ---------- popup ---------- */
+
   #popup {
     width: 95%;
-    margin: 8rem auto;
     background-color: white;
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     overflow: hidden;
+    display: none;
+  }
+  .modal {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 998;
+    display: none;
+  }
+  #popup button {
+    margin-left: 300px;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 3px 8px;
+    background-color: white;
+    cursor: pointer;
   }
   #popup .stripe1 {
     width: 130%;
@@ -90,11 +114,11 @@
     font-size: 14px;
   }
 
-  /* ---------- con1 ---------- */
-  #con1 {
+  /* ---------- con2 ---------- */
+  #con2 {
     margin-top: 8rem;
   }
-  #con1 .store {
+  #con2 .store {
     width: 90%;
     margin: 4rem auto;
     display: flex;
@@ -102,37 +126,37 @@
     flex-direction: column;
     gap: 10px;
   }
-  #con1 .store > li {
+  #con2 .store > li {
     border-radius: 10px;
     font-size: 14px;
   }
-  #con1 .store img {
+  #con2 .store img {
     width: 260px;
     border-radius: 10px;
   }
-  #con1 h3 {
+  #con2 h3 {
     color: #d70204;
     font-size: 20px;
     margin-bottom: 1rem;
     margin-top: -0.3rem;
   }
-  #con1 span {
+  #con2 span {
     color: #d70204;
   }
-  #con1 .store > li:last-child {
+  #con2 .store > li:last-child {
     background-color: white;
     box-sizing: border-box;
     padding: 2rem;
   }
-  #con1 .store ul {
+  #con2 .store ul {
     display: flex;
     gap: 10px;
     margin-top: 1.5rem;
   }
-  #con1 .open {
+  #con2 .open {
     margin: 1.4rem 0px 0.7rem;
   }
-  #con1 .btn li:nth-child(1) {
+  #con2 .btn li:nth-child(1) {
     width: 80px;
     height: 30px;
     line-height: 30px;
@@ -141,13 +165,13 @@
     background-color: #d70204;
     font-size: 14px;
   }
-  #con1 .btn li:nth-child(1) a {
+  #con2 .btn li:nth-child(1) a {
     width: 100%;
     height: 100%;
     display: block;
     color: white;
   }
-  #con1 .btn li:nth-child(2) {
+  #con2 .btn li:nth-child(2) {
     width: 60px;
     height: 30px;
     line-height: 30px;
@@ -156,13 +180,13 @@
     background-color: #d70204;
     font-size: 14px;
   }
-  #con1 .btn li:nth-child(2) a {
+  #con2 .btn li:nth-child(2) a {
     width: 100%;
     height: 100%;
     display: block;
     color: white;
   }
-  #con1 .btn li:nth-child(3) {
+  #con2 .btn li:nth-child(3) {
     width: 80px;
     height: 30px;
     line-height: 30px;
@@ -171,7 +195,7 @@
     background-color: #777;
     font-size: 14px;
   }
-  #con1 .btn li:nth-child(3) a {
+  #con2 .btn li:nth-child(3) a {
     width: 100%;
     height: 100%;
     display: block;
