--- a/css/store.tablet.css
+++ b/css/store.tablet.css
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     padding: 0px 50px;
     z-index: 100;
+    opacity: 0;
   }
   header h1 img {
     width: 140px;
@@ -37,7 +38,6 @@
   #visual {
     width: 100%;
     height: 27rem;
-    margin-top: 80px;
     overflow: hidden;
     background-image: url(../img/visual.jpg);
     background-repeat: no-repeat;
@@ -57,8 +57,31 @@
   /* ---------- popup ---------- */
   #popup {
     width: 750px;
-    margin: 8rem auto;
     background-color: white;
+    position: fixed;
+    z-index: 999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+  }
+  .modal {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 998;
+    display: none;
+  }
+  #popup button {
+    margin-left: 310px;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 3px 8px;
+    background-color: white;
+    cursor: pointer;
   }
   #popup .stripe1 {
     width: 100%;
@@ -87,49 +110,49 @@
     font-size: 14px;
   }
 
-  /* ---------- con1 ---------- */
-  #con1 {
+  /* ---------- con2 ---------- */
+  #con2 {
     margin-top: 8rem;
   }
-  #con1 .store {
+  #con2 .store {
     width: 750px;
     height: 210px;
     margin: 6rem auto;
     display: flex;
     gap: 15px;
   }
-  #con1 .store > li {
+  #con2 .store > li {
     border-radius: 10px;
     font-size: 14px;
   }
-  #con1 .store img {
+  #con2 .store img {
     width: 300px;
     border-radius: 10px;
   }
-  #con1 h3 {
+  #con2 h3 {
     color: #d70204;
     font-size: 20px;
     margin-bottom: 1rem;
     margin-top: -0.3rem;
   }
-  #con1 span {
+  #con2 span {
     color: #d70204;
   }
-  #con1 .store > li:last-child {
+  #con2 .store > li:last-child {
     width: calc(100% - 315px);
     background-color: white;
     box-sizing: border-box;
     padding: 2rem;
   }
-  #con1 .store ul {
+  #con2 .store ul {
     display: flex;
     gap: 10px;
     margin-top: 1.5rem;
   }
-  #con1 .open {
+  #con2 .open {
     margin: 1.4rem 0px 0.7rem;
   }
-  #con1 .btn li:nth-child(1) {
+  #con2 .btn li:nth-child(1) {
     width: 80px;
     height: 30px;
     line-height: 30px;
@@ -138,13 +161,13 @@
     background-color: #d70204;
     font-size: 14px;
   }
-  #con1 .btn li:nth-child(1) a {
+  #con2 .btn li:nth-child(1) a {
     width: 100%;
     height: 100%;
     display: block;
     color: white;
   }
-  #con1 .btn li:nth-child(2) {
+  #con2 .btn li:nth-child(2) {
     width: 60px;
     height: 30px;
     line-height: 30px;
@@ -153,13 +176,13 @@
     background-color: #d70204;
     font-size: 14px;
   }
-  #con1 .btn li:nth-child(2) a {
+  #con2 .btn li:nth-child(2) a {
     width: 100%;
     height: 100%;
     display: block;
     color: white;
   }
-  #con1 .btn li:nth-child(3) {
+  #con2 .btn li:nth-child(3) {
     width: 80px;
     height: 30px;
     line-height: 30px;
@@ -168,7 +191,7 @@
     background-color: #777;
     font-size: 14px;
   }
-  #con1 .btn li:nth-child(3) a {
+  #con2 .btn li:nth-child(3) a {
     width: 100%;
     height: 100%;
     display: block;
