--- a/css/story.tablet.css
+++ b/css/story.tablet.css
@@ -152,6 +152,10 @@
   .con li:nth-child(2n) {
     right: 6%;
   }
+  .con p {
+    font-size: 13px;
+    text-align: justify;
+  }
   /* box1 */
   .location li:nth-child(1) {
     top: 50px;
