--- a/css/food.pc.css
+++ b/css/food.pc.css
@@ -110,11 +110,37 @@
     background-color: white;
     margin: 0px auto;
     text-align: center;
+  }
+  .saladWrap {
     background-image: url(../img/food_salad1.png), url(../img/food_salad2.png),
       url(../img/food_salad3.png), url(../img/food_salad4.png);
     background-repeat: no-repeat;
-    background-position: 30px 310px, 800px 600px, -30px 850px, 740px 1100px;
+    background-position: 30px 200px, 800px 500px, -30px 750px, 740px 1000px;
     background-size: 300px, 320px, 380px, 300px;
+  }
+  .pastaWrap {
+    background-image: url(../img/food_pasta1.png), url(../img/food_pasta2.png),
+      url(../img/food_pasta3.png), url(../img/food_pasta4.png);
+    background-repeat: no-repeat;
+    background-position: 30px 200px, 800px 500px, -30px 750px, 740px 1000px;
+    background-size: 300px, 320px, 380px, 300px;
+    display: none;
+  }
+  .burgerWrap {
+    background-image: url(../img/food_burger1.png), url(../img/food_burger2.png),
+      url(../img/food_burger3.png), url(../img/food_burger4.png);
+    background-repeat: no-repeat;
+    background-position: 30px 200px, 800px 500px, -30px 750px, 740px 1000px;
+    background-size: 300px, 320px, 380px, 300px;
+    display: none;
+  }
+  .grillWrap {
+    background-image: url(../img/food_grill1.png), url(../img/food_grill2.png),
+      url(../img/food_grill3.png), url(../img/food_grill4.png);
+    background-repeat: no-repeat;
+    background-position: 30px 200px, 800px 500px, -30px 750px, 740px 1000px;
+    background-size: 300px, 320px, 380px, 300px;
+    display: none;
   }
   #con2 .stripeTop {
     width: 100%;
