--- a/css/index.pc.css
+++ b/css/index.pc.css
@@ -144,6 +144,18 @@
     background-size: cover;
     background-position: center;
   }
+  .con1Top li:nth-child(1):hover {
+    background-size: 120%;
+  }
+  .con1Top li:nth-child(2):hover {
+    background-size: 160%;
+  }
+  .con1Bottom li:nth-child(1):hover {
+    background-size: 130%;
+  }
+  .con1Bottom li:nth-child(3):hover {
+    background-size: 140%;
+  }
   .con1Top li:nth-child(2) {
     width: calc(100% / 4 - 20px);
     background-image: url(../img/index_con1_2.jpg);
